--- a/proyecto/perfiles/templates/perfiles/index.html
+++ b/proyecto/perfiles/templates/perfiles/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <!-- Navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-image: url('{% block background %} {% endblock %}')">
       <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">Monitorias UTP</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,31 +31,14 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Iniciar Sesion</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'signup' %}">Registrarse</a>
+              <a class="nav-link" href="{% url 'logout' %}">Cerrar Sesion</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- Cabecera -->
-    <header class="masthead" style="background-image: url('{% block background %} {% endblock %}')">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="site-heading">
-                {% block headers %}{% endblock %}
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
+    
 
     <!-- Contenido -->
     <div class="container">
