--- a/proyecto/perfiles/templates/perfiles/index_su.html
+++ b/proyecto/perfiles/templates/perfiles/index_su.html
@@ -1,12 +1,12 @@
-{% extends 'core/base.html' %}
+{% extends 'perfiles/index.html' %}
 
 {% block background %}{% load static %}{% static 'core/img/Cabecera1.jpg' %}{% endblock %}
 
 {% block headers %}
 
-<h1>Monitorías UTP</h1>
-<span class="subheading" >Prototipo Web</span>
-
 {% endblock %}
 
+{% block content %}
 
+
+{% endblock %}
